--- a/messenger/README
+++ b/messenger/README
@@ -1,3 +1,3 @@
 This is a basic simple messenger that supports only sending and receiving messages.
 First, you need to execute server.py and then messenger.py to chat
-
+To change the server host firstly change it in server.py (row 83 )and then in messenger.py (row 46, 62)
